<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_linearlayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="5dp">

    <ImageView
        android:id="@+id/movie_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:padding="20dp"
        app:srcCompat="@drawable/heven" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/movieHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:foregroundGravity="top|center"
            android:gravity="center|start"
            android:paddingTop="10dp"
            android:text="MISS SUNSHINE"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/movie_category"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:background="@drawable/circle_clasification"
            android:gravity="center|center_horizontal"
            android:text="PG13"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/selling_fastview"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:visibility="invisible"
            app:srcCompat="@drawable/sellingfast" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_condensed_regular"
            android:paddingStart="10dp"
            android:text="@string/fix_title_starring"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movie_staring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_condensed_regular"
            android:paddingStart="5dp"
            android:text="TextView"
            android:textColor="@color/graylight"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_condensed_regular"
            android:paddingStart="10dp"
            android:text="@string/fix_title_running_time"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movie_running_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_condensed_regular"
            android:paddingStart="5dp"
            android:text="TextView"
            android:textColor="@color/graylight"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_condensed_regular"
            android:paddingStart="5dp"
            android:text="@string/min"
            android:textColor="@color/graylight"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/movie_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_condensed_regular"
            android:padding="10dp"
            android:text="TextView"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_condensed_regular"
            android:text="@string/selectSeats"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/minus_imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:background="@drawable/circular_image_view"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_round_remove_24"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/movie_selectSeats_editTextNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ems="1"
            android:fontFamily="@font/roboto_condensed_regular"
            android:text="0"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <ImageButton
            android:id="@+id/plus_imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:background="@drawable/circular_image_view"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_baseline_add_24"
            app:tint="@color/black" />

        <ImageButton
            android:id="@+id/imageButton_seat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@color/black"
            android:paddingLeft="20dp"
            android:visibility="visible"
            app:srcCompat="@drawable/ic_baseline_event_seat_24"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/seats_remaining_textView"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:fontFamily="@font/roboto_condensed_regular"
            android:gravity="center"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left|end"
            android:fontFamily="@font/roboto_condensed_regular"
            android:paddingLeft="5dp"
            android:text="@string/seatsRemaining"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

    </LinearLayout>

</LinearLayout>